# gptx

./: .gitignore  README.md
cpp/: CMakeLists.txt  einops.cpp  einops.h  main.cpp  nn.cpp  nn.h  ops.cpp  tensor.cpp  tensor.h  utils.cpp
cpp/include/: ops.h  utils.h
cpp/src/: einops.cpp  main.cpp  tensor.cpp  utils.cpp
python/: get_gpt_weights.py  plot_benchmarks.py  requirements.txt
rust/: Cargo.toml
rust/src/: einops.rs  lib.rs  main.rs  nn.rs  ops.rs  tensor.rs  utils.rs
scripts/: cpp.sh  rust.sh
