[package]
name = "gptx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.10"
hf-hub = "0.3.2"
ndarray = "0.15.6"
rayon = "1.8.0"
safetensors = "0.4.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokenizers = "0.15.0"
